# coursework

./: .envrc  .gitignore  README.md  coursework.toml  hatch_build.py  package-lock.json  pyproject.toml  test_script.sh
src/coursework/: __init__.py  __main__.py  loaders.py  models.py  report.py  runner.py  score.py  testing.py
src/coursework/cli/: __init__.py  converters.py  instructor.py  student.py
src/coursework/web/: __init__.py  __main__.py  auth.py  submission.py
src/coursework/web/static/: output.css
src/coursework/web/templates/: base.html
src/coursework/web/templates/auth/: login.html
src/coursework/web/templates/submission/: course.html  course_assignment.html  courses.html  results.html
src/coursework_c/: coursework.c  coursework_admin.c
tests/: test_cli.py  test_cli_instructor.py  test_cli_students.py  test_loaders.py  test_models.py  test_runner.py  test_score.py  test_testing.py
