[project]
name = "coursework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ian Kollipara", email = "ian.kollipara@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "pygments>=2.18.0",
    "reportlab>=4.2.5",
    "rich>=13.9.4",
]

[project.scripts]
coursework = "coursework:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
