[project]
name = "coursework"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ian Kollipara", email = "ian.kollipara@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "pygments>=2.18.0",
    "reportlab>=4.2.5",
    "rich>=13.9.4",
]

[project.scripts]
coursework = "coursework.cli.student:cli"
coursework-admin = "coursework.cli.instructor:cli"
coursework-score = "coursework.score:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.6.10",
    "ruff>=0.8.5",
]

[tool.coverage.run]
source = ["./src"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if DEBUG:",
  "if not DEBUG:",
  "if settings.DEBUG:",
  "if TYPE_CHECKING:",
  'from \w*',
  'import \w*'
]

[tool.ruff]
line-length = 120

[tool.ruff.lint.isort]
force-single-line = true
