[project]
name = "coursework"
version = "0.0.2"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ian Kollipara", email = "ian.kollipara@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "flask>=3.1.1",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "lxml>=6.0.0",
    "pygments>=2.18.0",
    "python-dotenv>=1.1.1",
    "python3-saml>=1.16.0",
    "pytz>=2025.2",
    "reportlab>=4.2.5",
    "rich>=13.9.4",
    "wtforms>=3.2.1",
    "xmlsec>=1.3.16",
]

[project.scripts]
_coursework = "coursework.cli.student:main"
_coursework-admin = "coursework.cli.instructor:main"
coursework-score = "coursework.score:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.6.10",
    "hatchling>=1.27.0",
    "ruff>=0.8.5",
]

[tool.coverage.run]
source = ["./src"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if DEBUG:",
  "if not DEBUG:",
  "if settings.DEBUG:",
  "if TYPE_CHECKING:",
  'from \w*',
  'import \w*'
]

[tool.ruff]
line-length = 120

[tool.ruff.lint.isort]
force-single-line = true


[tool.hatch.build.hooks.custom]
path = "./hatch_build.py"

[tool.hatch.build.targets.wheel]
artifacts = [
    "coursework",
    "coursework-admin"
]
